Fixed the white (made it #fff) because it was **terrible** on mobile

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,6 @@
  * colours *
  ***********/
 $c-background: #440055;
-$c-foreground: #ffffee;
+$c-foreground: #ffffff;
 
 $c-text: #1e0025
