--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@ img {
     width: 80vw; } }
 body {
   background: #440055;
-  color: #ffffee;
+  color: #ffffff;
   font-family: sans-serif;
   font-size: 15px;
   line-height: 1.3; }
@@ -101,7 +101,7 @@ section {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background: #ffffee;
+  background: #ffffff;
   color: #1e0025;
   padding: 20px 28px 32px;
   border-radius: 20px; }
